# feos-gc-pcsaft

./: CHANGELOG.md  Cargo.toml  README.md  license-apache
.github/workflows/: test.yml
build_wheel/: Cargo.toml
build_wheel/src/: dft.rs  eos.rs  lib.rs
examples/: alcohols.ipynb
parameters/: associating.json  dipolar.json  non_associating.json  parameters_hetero_binary.json  parameters_hetero_segments.json  quadrupolar_fitted_q.json  quadrupolar_literature_q.json
src/: lib.rs  micelles.rs  parameter.rs  parameters.rs  record.rs
src/dft/: association.rs  dispersion.rs  hard_chain.rs  mod.rs  parameter.rs
src/eos/: association.rs  dispersion.rs  hard_chain.rs  hard_sphere.rs  mod.rs  parameter.rs  polar.rs
src/python/: dft.rs  eos.rs  micelles.rs  mod.rs  parameter.rs  parameters.rs
tests/: binary.rs  dft.rs
